tests/fail/move_in_loop.tk
shape Data(id: i32)

fn main() -> i32 {
    auto ^p = new Data(id = 1)
    
    for auto i in [0, 1, 2, 3, 4] {
        // In the second iteration, p will have been moved already
        auto ^p2 = cede ^p
    }
    
    return 0
}

